datafusion-sqlancer README and CI